examples/test/testpolicy2052.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2052
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key20: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value41
      podSelector:
        matchLabels:
          key44: value43
          key5: value8
          key40: value9
